--- a/Sandbox/2_6_spacing.html
+++ b/Sandbox/2_6_spacing.html
@@ -22,7 +22,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-primary btn-block dropdown-toggle"
+                class="btn btn-primary btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -52,7 +52,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-success btn-block dropdown-toggle"
+                class="btn btn-success btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -87,7 +87,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-warning btn-block dropdown-toggle"
+                class="btn btn-warning btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -112,7 +112,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-danger btn-block dropdown-toggle"
+                class="btn btn-danger btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -171,7 +171,8 @@
       <!-- ML & MR -->
       <p>
         <span class="me-5 bg-success">Margin Right 5</span> dolor sit amet,
-        <span class="ms-5 bg-success">Margin Left 3 </span> elit. Voluptatum, optio.
+        <span class="ms-5 bg-success">Margin Left 3 </span> elit. Voluptatum,
+        optio.
       </p>
 
       <br />
@@ -227,7 +228,8 @@
       <!-- PL & PR -->
       <p>
         <span class="pe-5 bg-warning">Padding Right 5</span> dolor sit amet,
-        <span class="ps-5 bg-warning">Padding Left 3 </span> elit. Voluptatum, optio.
+        <span class="ps-5 bg-warning">Padding Left 3 </span> elit. Voluptatum,
+        optio.
       </p>
 
       <br />
@@ -252,7 +254,9 @@
       <p class="p-5 bg-warning">Padding All Sides 5</p>
 
       <!-- HORIZONTAL CENTERING -->
-      <div class="mx-auto bg-info" style="width: 200px">Horizontal Centering</div>
+      <div class="mx-auto bg-info" style="width: 200px">
+        Horizontal Centering
+      </div>
     </div>
     <!-- ./container -->
     <div style="margin-top: 500px"></div>
