--- a/Sandbox/2_7_sizing.html
+++ b/Sandbox/2_7_sizing.html
@@ -22,7 +22,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-primary btn-block dropdown-toggle"
+                class="btn btn-primary btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -52,7 +52,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-success btn-block dropdown-toggle"
+                class="btn btn-success btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -87,7 +87,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-warning btn-block dropdown-toggle"
+                class="btn btn-warning btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -112,7 +112,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-danger btn-block dropdown-toggle"
+                class="btn btn-danger btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -157,7 +157,7 @@
       <br />
 
       <!-- HEIGHT CLASSES -->
-      <div style="height:300px;border:1px solid #333">
+      <div style="height: 300px; border: 1px solid #333">
         <div class="bg-primary d-inline-block h-25">Height 25%</div>
         <div class="bg-primary d-inline-block h-50">Height 50%</div>
         <div class="bg-primary d-inline-block h-75">Height 75%</div>
@@ -180,7 +180,9 @@
 
       <!-- BORDER COLORS -->
       <div class="p-3 mb-2 bg-light border border-primary">Primary</div>
-      <div class="p-3 mb-2 bg-light border-bottom border-secondary">Secondary</div>
+      <div class="p-3 mb-2 bg-light border-bottom border-secondary">
+        Secondary
+      </div>
       <div class="p-3 mb-2 bg-light border-top border-success">Success</div>
       <div class="p-3 mb-2 bg-light border-start border-info">Info</div>
       <div class="p-3 mb-2 bg-light border-end border-warning">Warning</div>
@@ -194,11 +196,21 @@
 
       <!-- BORDER RADIUS -->
       <div class="p-3 mb-2 bg-light border rounded border-success">Rounded</div>
-      <div class="p-3 mb-2 bg-light border rounded-top border-danger">Rounded Top</div>
-      <div class="p-3 mb-2 bg-light border rounded-bottom border-primary">Rounded Bottom</div>
-      <div class="p-3 mb-2 bg-light border rounded-end border-info">Rounded Right</div>
-      <div class="p-3 mb-2 bg-light border rounded-start border-info">Rounded Left</div>
-      <div class="p-3 mb-2 bg-light w-25 border rounded-circle">Rounded Circle</div>
+      <div class="p-3 mb-2 bg-light border rounded-top border-danger">
+        Rounded Top
+      </div>
+      <div class="p-3 mb-2 bg-light border rounded-bottom border-primary">
+        Rounded Bottom
+      </div>
+      <div class="p-3 mb-2 bg-light border rounded-end border-info">
+        Rounded Right
+      </div>
+      <div class="p-3 mb-2 bg-light border rounded-start border-info">
+        Rounded Left
+      </div>
+      <div class="p-3 mb-2 bg-light w-25 border rounded-circle">
+        Rounded Circle
+      </div>
       <div class="p-3 mb-2 bg-light border rounded-0">Dark</div>
     </div>
     <!-- ./container -->
