--- a/Sandbox/2_8_breakpoints.html
+++ b/Sandbox/2_8_breakpoints.html
@@ -80,7 +80,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-primary btn-block dropdown-toggle"
+                class="btn btn-primary btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -110,7 +110,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-success btn-block dropdown-toggle"
+                class="btn btn-success btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -145,7 +145,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-warning btn-block dropdown-toggle"
+                class="btn btn-warning btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -170,7 +170,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-danger btn-block dropdown-toggle"
+                class="btn btn-danger btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
