--- a/Sandbox/2_2_basic_typography.html
+++ b/Sandbox/2_2_basic_typography.html
@@ -23,7 +23,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-primary btn-block dropdown-toggle"
+                class="btn btn-primary btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -53,7 +53,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-success btn-block dropdown-toggle"
+                class="btn btn-success btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -88,7 +88,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-warning btn-block dropdown-toggle"
+                class="btn btn-warning btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -113,7 +113,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-danger btn-block dropdown-toggle"
+                class="btn btn-danger btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
