--- a/Sandbox/2_5_colors_background.html
+++ b/Sandbox/2_5_colors_background.html
@@ -22,7 +22,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-primary btn-block dropdown-toggle"
+                class="btn btn-primary btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -52,7 +52,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-success btn-block dropdown-toggle"
+                class="btn btn-success btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -87,7 +87,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-warning btn-block dropdown-toggle"
+                class="btn btn-warning btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
@@ -112,7 +112,7 @@
           <div class="col-md-3">
             <div class="dropdown">
               <button
-                class="btn btn-danger btn-block dropdown-toggle"
+                class="btn btn-danger btn-block dropdown-toggle w-100"
                 type="button"
                 data-bs-toggle="dropdown"
               >
