--- a/Sandbox/4_2_grid_system.html
+++ b/Sandbox/4_2_grid_system.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-primary btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               2: Utilities
             </button>
             <div class="dropdown-menu">
@@ -33,7 +33,7 @@
         </div>
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-success btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-success btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               3: CSS Components
             </button>
             <div class="dropdown-menu">
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-warning btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-warning btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               4: Grid & Flexbox
             </button>
             <div class="dropdown-menu">
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-danger btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-danger btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               5: JavaScript Widgets
             </button>
             <div class="dropdown-menu">
@@ -87,8 +87,8 @@
     <!--####################START HERE####################-->
 
     <!-- RESPONSIVE GRID -->
-    <div>
-      <div style="border:1px solid #333">
+    <div class="row">
+      <div class="col-sm-6 col-md-8 col-lg-9" style="border:1px solid #333">
         <ul>
           <li>6 column on small screens</li>
           <li>8 column on medium screen</li>
@@ -96,7 +96,7 @@
           <li>10 column on xlarge screen</li>
         </ul>
       </div>
-      <div style="border:1px solid #333">
+      <div class="col-sm-6 col-md-4 col-lg-3" style="border:1px solid #333">
         <ul>
           <li>6 column on small screens</li>
           <li>4 column on medium screen</li>
@@ -107,75 +107,75 @@
     </div>
 
     <!-- EQUAL WIDTH -->
-    <div>
-      <div style="border:1px solid #333">Equal Width</div>
-      <div style="border:1px solid #333">Equal Width</div>
-      <div style="border:1px solid #333">Equal Width</div>
-      <div style="border:1px solid #333">Equal Width</div>
+    <div class="row">
+      <div class="col" style="border:1px solid #333">Equal Width</div>
+      <div class="col" style="border:1px solid #333">Equal Width</div>
+      <div class="col" style="border:1px solid #333">Equal Width</div>
+      <div class="col" style="border:1px solid #333">Equal Width</div>
     </div>
 
     <!-- EQUAL WIDTH MULTI ROW -->
-    <div>
-      <div style="border:1px solid #333">Equal Width Multi</div>
-      <div style="border:1px solid #333">Equal Width Multi</div>
-      <div style="border:1px solid #333"></div>
-      <div style="border:1px solid #333">Equal Width Multi</div>
-      <div style="border:1px solid #333">Equal Width Multi</div>
+    <div class="row">
+      <div class="col" style="border:1px solid #333">Equal Width Multi</div>
+      <div class="col" style="border:1px solid #333">Equal Width Multi</div>
+      <div class="w-100" style="border:1px solid #333"></div>
+      <div class="col" style="border:1px solid #333">Equal Width Multi</div>
+      <div class="col" style="border:1px solid #333">Equal Width Multi</div>
     </div>
 
     <!-- AUTO LAYOUT -->
-    <div>
-      <div style="border:1px solid #333">Auto Layout</div>
-      <div style="border:1px solid #333">Auto Layout</div>
-      <div style="border:1px solid #333">Auto Layout</div>
+    <div class="row">
+      <div class="col" style="border:1px solid #333">Auto Layout</div>
+      <div class="col-6" style="border:1px solid #333">Auto Layout</div>
+      <div class="col-4" style="border:1px solid #333">Auto Layout</div>
     </div>
 
     <!-- EQUAL WIDTH STACKED -->
-    <div>
-      <div style="border:1px solid #333">Equal Width Stack</div>
-      <div style="border:1px solid #333">Equal Width Stack</div>
-      <div style="border:1px solid #333">Equal Width Stack</div>
+    <div class="row">
+      <div class="col-sm" style="border:1px solid #333">Equal Width Stack</div>
+      <div class="col-sm" style="border:1px solid #333">Equal Width Stack</div>
+      <div class="col-sm" style="border:1px solid #333">Equal Width Stack</div>
     </div>
 
     <!-- ORDERING -->
-    <div>
-      <div style="border:1px solid #333">
+    <div class="row">
+      <div class="col order-3" style="border:1px solid #333">
         First
       </div>
-      <div style="border:1px solid #333">
+      <div class="col order-2" style="border:1px solid #333">
         Second
       </div>
-      <div style="border:1px solid #333">
+      <div class="col order-1" style="border:1px solid #333">
         Third
       </div>
     </div>
 
     <!-- OFFSETTING -->
-    <div>
+    <div class="row">
       <!-- 6 column div offset by 3 -->
-      <div style="border:1px solid #333">.col-md-6 .offset-md-3</div>
+      <div class="col-md-6 offset-md-3" style="border:1px solid #333">.col-md-6 .offset-md-3</div>
     </div>
-    <div>
+    <div class="row">
       <!-- 2 4 column divs, the second offset by 4 -->
-      <div style="border:1px solid #333">.col-md-4</div>
-      <div style="border:1px solid #333">.col-md-4 .offset-md-4</div>
+      <div class="col-md-4" style="border:1px solid #333">.col-md-4</div>
+      <div class="col-md-4 offset-md-4" style="border:1px solid #333">.col-md-4 .offset-md-4</div>
     </div>
 
-    <div>
+    <div class="row">
       <!-- 2 3 column divs, both offset by 3 -->
-      <div style="border:1px solid #333">.col-md-3 .offset-md-3</div>
-      <div style="border:1px solid #333">.col-md-3 .offset-md-3</div>
+      <div class="col-md-3 offset-md-3" style="border:1px solid #333">.col-md-3 .offset-md-3</div>
+      <div class="col-md-3 offset-md-3" style="border:1px solid #333">.col-md-3 .offset-md-3</div>
     </div>
 
     <!-- NESTING -->
-    <div>
-      <div style="border:1px solid blue">
+    <div class="row">
+      <div class="col-sm-9" style="border:1px solid blue">
         Level 1: .col-sm-9
-        <div>
-          <div style="border:1px solid red">
+        <div class="row">
+          <div class="col-8 col-sm-6" style="border:1px solid red">
             Level 2: .col-8 .col-sm-6
           </div>
-          <div style="border:1px solid red">
+          <div class="col-4 col-sm-6" style="border:1px solid red">
             Level 2: .col-4 .col-sm-6
           </div>
         </div>
@@ -184,12 +184,16 @@
 
     <div style="margin-top:500px;"></div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-      crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+      integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 </body>
 
 </html>
