--- a/Sandbox/4_4_flexbox.html
+++ b/Sandbox/4_4_flexbox.html
@@ -27,7 +27,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-primary btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               2: Utilities
             </button>
             <div class="dropdown-menu">
@@ -43,7 +43,7 @@
         </div>
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-success btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-success btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               3: CSS Components
             </button>
             <div class="dropdown-menu">
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-warning btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-warning btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               4: Grid & Flexbox
             </button>
             <div class="dropdown-menu">
@@ -75,7 +75,7 @@
         </div>
         <div class="col-md-3">
           <div class="dropdown">
-            <button class="btn btn-danger btn-block dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn btn-danger btn-block dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
               5: JavaScript Widgets
             </button>
             <div class="dropdown-menu">
@@ -97,7 +97,7 @@
     <!--#####################START HERE######################-->
 
     <!-- FLEX ROW & FLEX ITEMS -->
-    <div class="row-hl">
+    <div class="d-flex row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -107,7 +107,7 @@
     <br>
 
     <!-- FLEX ROW REVERSE -->
-    <div class="row-hl">
+    <div class="d-flex flex-row-reverse row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -117,7 +117,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT START -->
-    <div class="row-hl">
+    <div class="d-flex justify-content-start row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -127,7 +127,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT CENTER -->
-    <div class="row-hl">
+    <div class="d-flex justify-content-center row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -137,7 +137,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT END -->
-    <div class="row-hl">
+    <div class="d-flex justify-content-end row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -147,7 +147,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT AROUND -->
-    <div class="row-hl">
+    <div class="row-hl d-flex justify-content-around">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -157,7 +157,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT BETWEEN -->
-    <div class="row-hl">
+    <div class="row-hl d-flex justify-content-between">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -167,7 +167,7 @@
     <br>
 
     <!-- FLEX COLUMN -->
-    <div class="row-hl">
+    <div class="d-flex flex-column row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -177,7 +177,7 @@
     <br>
 
     <!-- FLEX COLUMN REVERSE -->
-    <div class="row-hl">
+    <div class="d-flex flex-column-reverse row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -187,7 +187,7 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - START -->
-    <div class="row-hl">
+    <div class="d-flex align-items-start row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -197,7 +197,7 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - CENTER -->
-    <div class="row-hl">
+    <div class="d-flex align-items-center row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -207,7 +207,7 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - END -->
-    <div class="row-hl">
+    <div class="d-flex align-items-end row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -217,7 +217,7 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - BASELINE -->
-    <div class="row-hl">
+    <div class="d-flex align-items-baseline row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -227,7 +227,7 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - STRETCH -->
-    <div class="row-hl">
+    <div class="d-flex align-items-stretch row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -237,22 +237,26 @@
     <br>
 
     <!-- ALIGN SELF -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
-      <div class="p-4 item-hl">Flex Item</div>
-      <div class="p-4 item-hl">Flex Item</div>
-      <div class="p-4 item-hl">Flex Item</div>
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="d-flex row-hl">
+      <div class="align-self-start p-4 item-hl">Flex Item</div>
+      <div class="align-self-center p-4 item-hl">Flex Item</div>
+      <div class="align-self-end p-4 item-hl">Flex Item</div>
+      <div class="align-self-baseline p-4 item-hl">Flex Item</div>
+      <div class="align-self-stretch p-4 item-hl">Flex Item</div>
     </div>
 
     <div style="margin-top:500px;"></div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-      crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+      integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 </body>
 
 </html>
