--- a/Sandbox/5_2_carousel.html
+++ b/Sandbox/5_2_carousel.html
@@ -148,22 +148,25 @@
       <div class="row">
         <div class="col-sm-8 m-auto">
           <!-- SIMPLE SLIDER -->
-          <div>
-            <div>
-              <div>
+          <div id="slider1" class="carousel slide mb-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
                 <img
+                  class="d-block img-fluid"
                   src="https://source.unsplash.com/wgq4eit198Q/700x400"
                   alt="First Slide"
                 />
               </div>
-              <div>
+              <div class="carousel-item">
                 <img
+                  class="d-block img-fluid"
                   src="https://source.unsplash.com/WLUHO9A_xik/700x400"
                   alt="Second Slide"
                 />
               </div>
-              <div>
+              <div class="carousel-item">
                 <img
+                  class="d-block img-fluid"
                   src="https://source.unsplash.com/4yta6mU66dE/700x400"
                   alt="Third Slide"
                 />
@@ -172,10 +175,191 @@
           </div>
 
           <!-- SLIDER WITH CONTROLS -->
+          <div id="slider2" class="carousel slide mb-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/wgq4eit198Q/700x400"
+                  alt="First Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/WLUHO9A_xik/700x400"
+                  alt="Second Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/4yta6mU66dE/700x400"
+                  alt="Third Slide"
+                />
+              </div>
+            </div>
+
+            <!-- CONROLS -->
+            <a
+              href="#slider2"
+              class="carousel-control-prev"
+              data-bs-slide="prev"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+
+            <a
+              href="#slider2"
+              class="carousel-control-next"
+              data-bs-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
 
           <!-- SLIDER WITH INDICATORS -->
+          <div id="slider3" class="carousel slide mb-5" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li
+                class="active"
+                data-bs-target="#slider3"
+                data-bs-slide-to="0"
+              ></li>
+              <li
+                class="active"
+                data-bs-target="#slider3"
+                data-bs-slide-to="1"
+              ></li>
+              <li
+                class="active"
+                data-bs-target="#slider3"
+                data-bs-slide-to="2"
+              ></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/wgq4eit198Q/700x400"
+                  alt="First Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/WLUHO9A_xik/700x400"
+                  alt="Second Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/4yta6mU66dE/700x400"
+                  alt="Third Slide"
+                />
+              </div>
+            </div>
+
+            <!-- CONROLS -->
+            <a
+              href="#slider3"
+              class="carousel-control-prev"
+              data-bs-slide="prev"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+
+            <a
+              href="#slider3"
+              class="carousel-control-next"
+              data-bs-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
 
           <!-- SLIDER WITH CAPTIONS -->
+          <div id="slider4" class="carousel slide mb-5" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li
+                class="active"
+                data-bs-target="#slider4"
+                data-bs-slide-to="0"
+              ></li>
+              <li
+                class="active"
+                data-bs-target="#slider4"
+                data-bs-slide-to="1"
+              ></li>
+              <li
+                class="active"
+                data-bs-target="#slider4"
+                data-bs-slide-to="2"
+              ></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/wgq4eit198Q/700x400"
+                  alt="First Slide"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Slide One</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione, vel.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/WLUHO9A_xik/700x400"
+                  alt="Second Slide"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Slide Two</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione, vel.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/4yta6mU66dE/700x400"
+                  alt="Third Slide"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Slide One</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione, vel.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- CONROLS -->
+            <a
+              href="#slider4"
+              class="carousel-control-prev"
+              data-bs-slide="prev"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+
+            <a
+              href="#slider4"
+              class="carousel-control-next"
+              data-bs-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -192,6 +376,5 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script></script>
   </body>
 </html>
