--- a/Sandbox/5_4_tooltips.html
+++ b/Sandbox/5_4_tooltips.html
@@ -147,25 +147,68 @@
       <!--###################START HERE######################-->
 
       <!-- TOOLTIPS -->
-      <button class="btn btn-primary">Tooltip On Top</button>
-      <button class="btn btn-success">Tooltip On Right</button>
-      <button class="btn btn-warning">Tooltip On Bottom</button>
-      <button class="btn btn-danger">Tooltip On Left</button>
+      <button
+        class="btn btn-primary"
+        data-bs-toggle="tooltip"
+        data-bs-placement="top"
+        title="Tooltip on top"
+      >
+        Tooltip On Top
+      </button>
+      <button
+        class="btn btn-success"
+        data-bs-toggle="tooltip"
+        data-bs-placement="right"
+        title="Tooltip on right"
+      >
+        Tooltip On Right
+      </button>
+      <button
+        class="btn btn-warning"
+        data-bs-toggle="tooltip"
+        data-bs-placement="bottom"
+        title="Tooltip on bottom"
+      >
+        Tooltip On Bottom
+      </button>
+      <button
+        class="btn btn-danger"
+        data-bs-toggle="tooltip"
+        data-bs-placement="left"
+        title="Tooltip on left"
+      >
+        Tooltip On Left
+      </button>
 
       <br />
       <br />
 
       <!-- TOOLTIPS WITH HTML -->
-      <button class="btn btn-primary">Tooltip On With HTML</button>
+      <button
+        id="hello"
+        class="btn btn-primary"
+        data-bs-toggle="tooltip"
+        data-bs-placement="top"
+        data-bs-html="true"
+        title="<h3>Hello</h3> <p>How are you?</p>"
+      >
+        Tooltip On With HTML
+      </button>
 
       <hr />
 
       <!-- TRIGGER WITH JS -->
-      <button class="btn btn-secondary">Show Tooltip</button>
+      <button class="btn btn-secondary" onclick="showTooltip()">
+        Show Tooltip
+      </button>
 
-      <button class="btn btn-secondary">Hide Tooltip</button>
+      <button class="btn btn-secondary" onclick="hideTooltip()">
+        Hide Tooltip
+      </button>
 
-      <button class="btn btn-secondary">Toggle Tooltip</button>
+      <button class="btn btn-secondary" onclick="toggleTooltip()">
+        Toggle Tooltip
+      </button>
     </div>
 
     <div style="margin-top: 500px"></div>
@@ -180,6 +223,31 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script></script>
+    <script>
+      // Intit tooltips
+      var tooltipTriggerList = [].slice.call(
+        document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      );
+      var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl);
+      });
+
+      const btn = document.getElementById('hello');
+      const tooltip = new bootstrap.Tooltip(btn);
+      // Show tooltip
+      function showTooltip() {
+        tooltip.show();
+      }
+
+      // Hide tooltip
+      function hideTooltip() {
+        tooltip.hide();
+      }
+
+      // Toggle tooltip
+      function toggleTooltip() {
+        tooltip.toggle();
+      }
+    </script>
   </body>
 </html>
