--- a/Sandbox/5_6_modals.html
+++ b/Sandbox/5_6_modals.html
@@ -147,24 +147,30 @@
       <!--#################START HERE#####################-->
 
       <!-- MODAL TRIGGER -->
-      <button>Launch Modal</button>
+      <button
+        class="btn btn-warning"
+        data-bs-toggle="modal"
+        data-bs-target="#myModal"
+      >
+        Launch Modal
+      </button>
 
       <!-- MODAL -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <h5>Modal Title</h5>
-              <button>&times;</button>
+      <div class="modal" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Modal Title</h5>
+              <button class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <div>
+            <div class="modal-body">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Temporibus unde veniam harum magnam molestias dignissimos omnis
               architecto, quod, obcaecati dolorum debitis dolore porro qui,
               iusto quo accusantium voluptates pariatur illo.
             </div>
-            <div>
-              <button>Close</button>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -174,6 +180,40 @@
       <br />
 
       <!-- LOGIN MODAL TRIGGER -->
+      <button
+        class="btn btn-success"
+        data-bs-toggle="modal"
+        data-bs-target="#loginModal"
+      >
+        Login
+      </button>
+
+      <div class="modal" id="loginModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Login</h5>
+              <button class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="username" class="form-label">Username</label>
+                  <input type="text" class="form-control" placeholder="Username">
+                </div>
+                 <div class="form-group">
+                  <label for="password" class="form-label">Password</label>
+                  <input type="password" class="form-control" placeholder="password">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button class="btn btn-info">Login</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- LOGIN MODAL -->
     </div>
