Fixed scroll-spy behaviour

--- a/SocialTheme/index.html
+++ b/SocialTheme/index.html
@@ -36,7 +36,7 @@
               <a href="#explore-head-section" class="nav-link">Explore</a>
             </li>
             <li class="nav-item">
-              <a href="#create-head-section" class="nav-link">Organize</a>
+              <a href="#plan-head-section" class="nav-link">Organize</a>
             </li>
             <li class="nav-item">
               <a href="#share-head-section" class="nav-link">Share</a>
@@ -162,7 +162,7 @@
     </section>
 
     <!-- EXPLORE SECTION -->
-    <section id="plan-section" class="bg-light text-muted py-5">
+    <section id="explore-section" class="bg-light text-muted py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
