--- a/MultiPageTheme/index.html
+++ b/MultiPageTheme/index.html
@@ -31,8 +31,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item active">
-              <a href="index.html" class="nav-link">Home</a>
+            <li class="nav-item">
+              <a href="index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
               <a href="about.html" class="nav-link">About Us</a>
