--- a/MultiPageTheme/blog.html
+++ b/MultiPageTheme/blog.html
@@ -70,7 +70,7 @@
     <section id="blog" class="py-3">
       <div class="container">
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-6">
             <div class="card">
               <img
                 src="https://source.unsplash.com/random/300x200"
@@ -113,7 +113,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-sm-6">
             <div class="card">
               <img
                 src="https://source.unsplash.com/random/301x200"
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-sm-6">
             <div class="card">
               <img
                 src="https://source.unsplash.com/random/300x201"
